--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /react
 COPY package.json .
 
 # RUN npm install --legacy-peer-deps
-RUN npm install --legacy-peer-deps
+RUN npm install
 
 COPY . .
 
