--- a/coordinate/Dockerfile
+++ b/coordinate/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY ./requirements.txt /app/requirements.txt
 
+RUN apt-get install libgl1-mesa-glx
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY ./Python_Server.py /app
