--- a/coordinate/Dockerfile
+++ b/coordinate/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /app
 
 COPY ./requirements.txt /app/requirements.txt
 
-RUN apt-get install libgl1-mesa-glx
+RUN apt-get update -y
+RUN apt-get install -y libgl1-mesa-glx
+RUN apt-get install -y libglib2.0-0
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY ./Python_Server.py /app
