--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
-    "tailwindcss": "^3.4.13",
-    "tailwindcss": "^3.4.13",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "tailwindcss": "^3.4.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
