--- a/coordinate/Dockerfile
+++ b/coordinate/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get install -y libgl1-mesa-glx
 RUN apt-get install -y libglib2.0-0
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
-COPY ./*.py /app
+COPY ./*.py /app/
 
 CMD [ "python3", "Python_Server.py" ]
 
