--- a/coordinate/Dockerfile
+++ b/coordinate/Dockerfile
@@ -7,6 +7,8 @@ COPY ./requirements.txt /app/requirements.txt
 RUN apt-get update -y
 RUN apt-get install -y libgl1-mesa-glx
 RUN apt-get install -y libglib2.0-0
+
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY ./*.py /app/
